bhushan::apply loan part release

--- a/gold-admin-frontend/src/app/views/pages/admin/funds-approvals/jewellery-release-final/part-release-final/part-release-final.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/funds-approvals/jewellery-release-final/part-release-final/part-release-final.component.html
@@ -129,7 +129,7 @@
                                 Documents
                             </button>
                             <button *ngIf="item.documents" style="width: 130px;" class="apply-kyc"
-                                (click)="updateDocument(item)">New Loan
+                                (click)="newLoan(item)">New Loan
                             </button>
                         </ng-container>
                     </mat-cell>
