--- a/gold-admin-frontend/src/app/views/pages/admin/loan-management/loan-application-form/tabs/upload-loan-documents/upload-loan-documents.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/loan-management/loan-application-form/tabs/upload-loan-documents/upload-loan-documents.component.html
@@ -22,7 +22,7 @@
             </div>
             <div class="col-4 form-label">
                 <label class="kt-padding-l-10 kt-padding-r-25">Pawn Ticket/Copy of Pledge</label>
-                <kt-button [value]="'print'" [type]="'button'" (click)="ExportAsPdf()"></kt-button>
+                <kt-button [value]="'print'" [type]="'button'" (click)="ExportAsPdf()" *ngIf="!show"></kt-button>
             </div>
             <div class="col-4 form-label" *ngIf="!show">
                 <label class="kt-padding-l-10">Scheme Confirmation Copy</label>
@@ -122,24 +122,29 @@
                             <img src="../../../../../../../assets/media/icons/image-placeholder.png"
                                 class="placeholder-image">
                         </div>
-                        <!-- <div class="position-relative edit-width"
-                            *ngIf="isEdit && controls?.loanAgreementCopyImage?.value">
-                            <img src="../../../../../assets/media/icons/edit.svg" alt="" class="kt-pointer edit-icon"
-                                (click)="editImages('loanAgreementCopy');">
-                        </div> -->
 
-                        <div class="" *ngIf="controls?.loanAgreementCopyImage?.value">
-                            <div class="d-inline-block img-container width kt-margin-r-15 position-relative"
+                        <div class="edit-width">
+                            <img src="../../../../../assets/media/icons/edit.svg" alt="" class="kt-pointer edit-icon"
+                                *ngIf="isEdit && controls?.pawnCopyImage?.value"
+                                (click)="editImages('pawnCopy');">
+                        </div>
+
+
+                        <div *ngIf="controls?.loanAgreementCopyImage?.value" class="position-relative">
+                            <div class="d-inline-block img-container width kt-margin-r-15"
                                 (click)="preview(controls?.loanAgreementCopyImage?.value)">
                                 <img class="fetched-image" [src]="controls?.loanAgreementCopyImage?.value"
                                     *ngIf="!pdf.loanAgreementCopy">
 
-                                <img class="edit-icon" src="../../../../../assets/media/icons/edit.svg"
-                                    *ngIf="pdf.loanAgreementCopy" (click)="preview(controls?.loanAgreementCopy.value)">
+                                <!-- <img class="edit-icon" src="../../../../../assets/media/icons/edit.svg"
+                                    *ngIf="pdf.loanAgreementCopy" (click)="preview(controls?.loanAgreementCopy.value)"> -->
                                 <iframe [src]="controls?.loanAgreementCopyImage.value | safe : 'resourceUrl'"
                                     height="250" width="290" scrolling="no" *ngIf="pdf.loanAgreementCopy"></iframe>
                             </div>
                         </div>
+                        <img src="../../../../../assets/media/icons/edit.svg"
+                            *ngIf="isEdit && controls?.loanAgreementCopyImage?.value" alt=""
+                            class="kt-pointer edit-icon" (click)="editImages('loanAgreementCopy');">
                     </div>
                 </div>
 
@@ -152,20 +157,21 @@
                                 class="placeholder-image">
                         </div>
 
-                        <!-- <div class="position-relative edit-width">
+                        <div class="edit-width">
                             <img src="../../../../../assets/media/icons/edit.svg" alt="" class="kt-pointer edit-icon"
                                 *ngIf="isEdit && controls?.pawnCopyImage?.value"
                                 (click)="editImages('pawnCopy');">
-                        </div> -->
+                        </div>
 
 
-                        <div class="" *ngIf="controls?.pawnCopyImage?.value">
+                        <div class="position-relative" *ngIf="controls?.pawnCopyImage?.value">
                             <div class="d-inline-block img-container width kt-margin-r-15 position-relative"
                                 (click)="preview(controls?.pawnCopyImage?.value)">
                                 <img class="fetched-image" [src]="controls?.pawnCopyImage?.value" *ngIf="!pdf.pawnCopy">
 
-                                <img class="edit-icon" src="../../../../../assets/media/icons/edit.svg"
-                                    (click)="preview(controls?.pawnCopy.value)"  *ngIf="isEdit && controls?.pawnCopyImage?.value">
+                                <!-- <img class="edit-icon" src="../../../../../assets/media/icons/edit.svg"
+                                    (click)="preview(controls?.pawnCopy.value)"
+                                    *ngIf="isEdit && controls?.pawnCopyImage?.value"> -->
                                 <iframe [src]="controls?.pawnCopyImage?.value | safe : 'resourceUrl'" height="250"
                                     width="290" scrolling="no" *ngIf="pdf.pawnCopy" class="position-relative"></iframe>
                                 <!-- <kt-pdf-viewer [page]="1" [showAll]="false" *ngIf="pdf.pawnCopy"
@@ -185,7 +191,7 @@
                                 class="placeholder-image">
                         </div>
 
-                        <!-- <div class="position-relative edit-width">
+                        <!-- <div class="edit-width">
                             <img src="../../../../../assets/media/icons/edit.svg" alt="" class="kt-pointer edit-icon"
                                 *ngIf="isEdit && controls?.schemeConfirmationCopyImage?.value"
                                 (click)="editImages('schemeConfirmationCopy');">
@@ -229,8 +235,8 @@
                                 <img class="fetched-image" [src]="controls?.signedChequeImage?.value"
                                     *ngIf="!pdf.signedCheque">
                                 <img src="../../../../../assets/media/icons/edit.svg" alt=""
-                                    *ngIf="isEdit && controls?.signedChequeImage?.value"
-                                    class="kt-pointer edit-icon" (click)="editImages('signedCheque');">
+                                    *ngIf="isEdit && controls?.signedChequeImage?.value" class="kt-pointer edit-icon"
+                                    (click)="editImages('signedCheque');">
                                 <iframe *ngIf="pdf.signedCheque"
                                     [src]="controls?.signedChequeImage?.value | safe : 'resourceUrl'" height="250"
                                     width="290" scrolling="no"></iframe>
@@ -264,8 +270,7 @@
                                 <img class="fetched-image" [src]="controls?.declarationCopyImage?.value"
                                     *ngIf="!pdf.declaration">
                                 <img src="../../../../../assets/media/icons/edit.svg" alt=""
-                                    class="kt-pointer edit-icon"
-                                    *ngIf="isEdit && controls?.declarationCopyImage?.value"
+                                    class="kt-pointer edit-icon" *ngIf="isEdit && controls?.declarationCopyImage?.value"
                                     (click)="editImages('declaration');">
                                 <iframe *ngIf="pdf.declaration"
                                     [src]="controls?.declarationCopyImage?.value | safe : 'resourceUrl'" height="250"
