--- a/gold-admin-frontend/src/app/views/pages/admin/funds-approvals/jewellery-release-final/part-release-final/part-release-final.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/funds-approvals/jewellery-release-final/part-release-final/part-release-final.component.html
@@ -24,7 +24,7 @@
 
                 <ng-container matColumnDef="loanStartDate">
                     <mat-header-cell *matHeaderCellDef>Loan Start Date</mat-header-cell>
-                    <mat-cell *matCellDef="let item">{{item.masterLoan.loanStartDate}}</mat-cell>
+                    <mat-cell *matCellDef="let item">{{item.masterLoan.loanStartDate | date:'mediumDate'}}</mat-cell>
                 </ng-container>
 
                 <ng-container matColumnDef="customerId">
@@ -43,17 +43,20 @@
 
                 <ng-container matColumnDef="loanEndDate">
                     <mat-header-cell *matHeaderCellDef>Loan End Date</mat-header-cell>
-                    <mat-cell *matCellDef="let item">{{item.masterLoan.loanStartDate}}</mat-cell>
+                    <mat-cell *matCellDef="let item">{{item.masterLoan.loanEndDate | date:'mediumDate'}}</mat-cell>
                 </ng-container>
 
                 <ng-container matColumnDef="tenure">
                     <mat-header-cell *matHeaderCellDef>Tenure</mat-header-cell>
-                    <mat-cell *matCellDef="let item">{{item.masterLoan.tenure}}</mat-cell>
+                    <mat-cell *matCellDef="let item">{{item.masterLoan.tenure}}
+                        <span *ngIf="item.masterLoan.tenure == 1">Month</span>
+                        <span *ngIf="item.masterLoan.tenure != 1">Months</span>
+                    </mat-cell>
                 </ng-container>
 
                 <ng-container matColumnDef="principalAmount">
                     <mat-header-cell *matHeaderCellDef>Principal Outstanding Amount</mat-header-cell>
-                    <mat-cell *matCellDef="let item">{{item.name }}</mat-cell>
+                    <mat-cell *matCellDef="let item">{{item.masterLoan.outstandingAmount }}</mat-cell>
                 </ng-container>
 
                 <ng-container matColumnDef="releaseDate">
@@ -132,26 +135,11 @@
                                 (click)="newLoan(item)">New Loan
                             </button>
                         </ng-container>
+
+                        <!-- <button style="width: 130px;" class="apply-kyc" (click)="updateStatus(item)">Update
+                        </button> -->
                     </mat-cell>
                 </ng-container>
-
-                <!-- <ng-container matColumnDef="assignAppraiser">
-                    <mat-header-cell *matHeaderCellDef></mat-header-cell>
-                    <mat-header-cell *matHeaderCellDef></mat-header-cell>
-                    <mat-cell *matCellDef="let role" class="kt-pointer">
-                        <div [ngStyle]="{'display': 'inherit'}">
-                            <button style="width: 120px;" class="apply-kyc" (click)="assign(role)">Assign
-                                Appraiser</button>
-                        </div>
-                        <div [ngStyle]="{'display': 'inherit'}">
-                            <button style="width: 120px;" class="apply-kyc" (click)="updateAppraiser(role)"
-                               >Update Appraiser
-                            </button>
-                        </div>
-                    </mat-cell>
-                </ng-container> -->
-
-
 
                 <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
                 <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
