--- a/gold-admin-frontend/src/styles.scss
+++ b/gold-admin-frontend/src/styles.scss
@@ -447,7 +447,7 @@ mat-header-row {
 	justify-content: center;
 	overflow: hidden;
 	position: relative;
-	cursor: pointer;
+	// cursor: pointer;
 
 	.fetched-image {
 		width: 100%;
