--- a/gold-admin-frontend/src/app/views/pages/admin/loan-management/loan-application-form/tabs/interest-calculator/interest-calculator.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/loan-management/loan-application-form/tabs/interest-calculator/interest-calculator.component.html
@@ -87,7 +87,7 @@
                                 {{partner.name | uppercase}}
                             </option>
                         </select>
-                        <mat-error *ngIf="controls.partnerId.touched && controls.partnerId.invalid">Filed is
+                        <mat-error *ngIf="controls.partnerId.touched && controls.partnerId.invalid">Field is
                             required</mat-error>
                     </div>
                 </div>
@@ -109,7 +109,7 @@
                                 {{schemes.schemeAmountEnd}})
                             </option>
                         </select>
-                        <mat-error *ngIf="controls.schemeId.touched && controls.schemeId.invalid">Filed is required
+                        <mat-error *ngIf="controls.schemeId.touched && controls.schemeId.invalid">Field is required
                         </mat-error>
                     </div>
                 </div>
