--- a/gold-admin-frontend/src/app/views/pages/admin/loan-management/loan-application-form/tabs/nominee-details/nominee-details.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/loan-management/loan-application-form/tabs/nominee-details/nominee-details.component.html
@@ -27,9 +27,10 @@
                             <input type="number" class="form-control" placeholder="18" numbersOnly
                                 formControlName="nomineeAge" (blur)="checkForMinor()"
                                 [class.isError]="controls.nomineeAge.touched && controls.nomineeAge.invalid">
-                            <mat-error *ngIf="controls.nomineeAge.touched && controls.nomineeAge.invalid">
-                                Field is Required
-                            </mat-error>
+                                <mat-error *ngIf="controls.nomineeAge.touched && controls.nomineeAge.invalid">
+                                    <span *ngIf="controls.nomineeAge.errors?.required">Field is Required</span>
+                                    <span *ngIf="controls.nomineeAge.errors?.max">Invalid Input</span>
+                                </mat-error>
                         </div>
                     </div>
                 </div>
