--- a/gold-admin-frontend/src/app/views/partials/components/upload-documents/upload-documents.component.html
+++ b/gold-admin-frontend/src/app/views/partials/components/upload-documents/upload-documents.component.html
@@ -1,6 +1,6 @@
 <div class="row justify-content-around" [formGroup]="documentsForm">
     <div class="col-11">
-        <div class="row kt-padding-t-15" *ngIf="show">
+        <div class="row kt-padding-t-15" *ngIf="showLoanTransferFlag">
             <div class="col-2 form-label ">
                 <label class="kt-padding-l-10">Outstanding Loan Amount</label>
             </div>
@@ -17,25 +17,34 @@
 
         </div>
         <div class="row kt-padding-t-15 kt-padding-b-20 justify-content-around">
-            <div class="col-4 form-label" *ngIf="!show">
+            <div class="col-4 form-label" *ngIf="showLoanFlag">
                 <label class="kt-padding-l-10">Loan Agreement Copy</label>
             </div>
-            <div class="col-4 form-label">
+            <div class="col-4 form-label" *ngIf="showLoanTransferFlag || showLoanFlag">
                 <label class="kt-padding-l-10 kt-padding-r-25">Pawn Ticket/Copy of Pledge</label>
                 <kt-button [value]="'print'" [type]="'button'" (click)="ExportAsPdf()"></kt-button>
             </div>
-            <div class="col-4 form-label" *ngIf="!show">
+            <div class="col-4 form-label" *ngIf="showLoanFlag">
                 <label class="kt-padding-l-10">Scheme Confirmation Copy</label>
             </div>
-            <div class="col-4 form-label" *ngIf="show">
+            <div class="col-4 form-label" *ngIf="showLoanTransferFlag">
                 <label class="kt-padding-l-10">Signed Cheque Copy</label>
             </div>
-            <div class="col-4 form-label" *ngIf="show">
+            <div class="col-4 form-label" *ngIf="showLoanTransferFlag">
                 <label class="kt-padding-l-10">Declaration Copy</label>
+            </div>
+            <div class="col-4 form-label" *ngIf="showScrapAcknowledgementFlag">
+                <label class="kt-padding-l-10">Processing Charges</label>
+            </div>
+            <div class="col-4 form-label" *ngIf="showScrapAcknowledgementFlag">
+                <label class="kt-padding-l-10">Standard Deduction %</label>
+            </div>
+            <div class="col-4 form-label" *ngIf="showScrapAcknowledgementFlag">
+                <label class="kt-padding-l-10">Customer Confirmation for melting ornament(Jewellery) </label>
             </div>
         </div>
         <div class="row justify-content-between" *ngIf="isEdit">
-            <div class="col-4" *ngIf="!show">
+            <div class="col-4" *ngIf="showLoanFlag">
                 <div class="input-group mb-3 w-80"
                     [class.isError]="controls.loanAgreementCopy.touched && controls.loanAgreementCopy.invalid">
                     <input type="text" class="form-control" placeholder="Select File" aria-label="Recipient's username"
@@ -52,7 +61,7 @@
                 <mat-error *ngIf="controls.loanAgreementCopy.touched && controls.loanAgreementCopy.invalid">Field
                     Required</mat-error>
             </div>
-            <div class="col-4">
+            <div class="col-4" *ngIf="showLoanTransferFlag || showLoanFlag">
                 <div class="input-group mb-3 w-80"
                     [class.isError]="controls.pawnCopy.touched && controls.pawnCopy.invalid">
                     <input type="text" class="form-control" placeholder="Select File" aria-label="Recipient's username"
@@ -66,7 +75,7 @@
                 </div>
                 <mat-error *ngIf="controls.pawnCopy.touched && controls.pawnCopy.invalid">Field Required</mat-error>
             </div>
-            <div class="col-4" *ngIf="!show">
+            <div class="col-4" *ngIf="showLoanFlag">
                 <div class="input-group mb-3 w-80"
                     [class.isError]="controls.schemeConfirmationCopy.touched && controls.schemeConfirmationCopy.invalid">
                     <input type="text" class="form-control" placeholder="Select File" aria-label="Recipient's username"
@@ -84,7 +93,7 @@
                     Required</mat-error>
 
             </div>
-            <div class="col-4" *ngIf="show">
+            <div class="col-4" *ngIf="showLoanTransferFlag">
                 <div class="input-group mb-3 w-80"
                     [class.isError]="controls.signedCheque.touched && controls.signedCheque.invalid">
                     <input type="text" class="form-control" placeholder="Select File" aria-label="Recipient's username"
@@ -99,7 +108,7 @@
                 <mat-error *ngIf="controls.signedCheque.touched && controls.signedCheque.invalid">Field Required
                 </mat-error>
             </div>
-            <div class="col-4" *ngIf="show">
+            <div class="col-4" *ngIf="showLoanTransferFlag">
                 <div class="input-group mb-3 w-80"
                     [class.isError]="controls.declaration.touched && controls.declaration.invalid">
                     <input type="text" class="form-control" placeholder="Select File" aria-label="Recipient's username"
@@ -113,9 +122,44 @@
                 <mat-error *ngIf="controls.declaration.touched && controls.declaration.invalid">Field Required
                 </mat-error>
             </div>
+            <div class="col-4" *ngIf="showScrapAcknowledgementFlag">
+                <input type="text" formControlName="processingCharges" class="form-control "
+                    [class.isError]="controls.processingCharges.touched && controls.processingCharges.invalid"
+                    placeholder="Processing Charges" readonly>
+                <mat-error *ngIf="controls.processingCharges.touched && controls.processingCharges.invalid">
+                    Field Required</mat-error>
+            </div>
+            <div class="col-4" *ngIf="showScrapAcknowledgementFlag">
+                <select class="form-control" formControlName="standardDeduction"
+                    [class.isError]="controls.standardDeduction.touched && controls.standardDeduction.invalid">
+                    <option value="" [disabled]="true" [selected]="true">Select Standard Deduction</option>
+                    <option [value]="sd.standardDeduction" *ngFor="let sd of standardDeductionArr">
+                        {{sd.standardDeduction}}
+                    </option>
+                </select>
+                <mat-error *ngIf="controls.standardDeduction.touched && controls.standardDeduction.invalid">
+                    <span *ngIf="controls.standardDeduction.errors?.required">Field Required</span>
+                </mat-error>
+            </div>
+            <div class="col-4" *ngIf="showScrapAcknowledgementFlag">
+                <div class="input-group mb-3 w-80"
+                    [class.isError]="controls.customerConfirmation.touched && controls.customerConfirmation.invalid">
+                    <input type="text" class="form-control" placeholder="Select File" aria-label="Recipient's username"
+                        aria-describedby="basic-addon2" readonly formControlName="customerConfirmationImageName" />
+                    <div class="input-group-append">
+                        <span class="input-group-text bg kt-pointer font-weight" id="basic-addon2"
+                            (click)="customerConfirmation.click()">Attach</span>
+                    </div>
+                    <input type="file" class="d-none" #customerConfirmation
+                        (change)="fileUpload($event,'customerConfirmation')">
+                </div>
+                <mat-error *ngIf="controls.customerConfirmation.touched && controls.customerConfirmation.invalid">Field
+                    Required
+                </mat-error>
+            </div>
         </div>
         <div class="row">
-            <div class="col" *ngIf="!show">
+            <div class="col" *ngIf="showLoanFlag">
                 <div class="row">
                     <div class="col-10 ">
                         <div class="img-container width" *ngIf="!controls?.loanAgreementCopy?.value">
@@ -144,7 +188,7 @@
                 </div>
 
             </div>
-            <div class="col">
+            <div class="col" *ngIf="showLoanTransferFlag || showLoanFlag">
                 <div class="row">
                     <div class="col-10">
                         <div class="img-container width" *ngIf="!controls?.pawnCopyImage?.value">
@@ -178,7 +222,7 @@
                 </div>
 
             </div>
-            <div class="col" *ngIf="!show">
+            <div class="col" *ngIf="showLoanFlag">
                 <div class="row">
                     <div class="col-10 position-relative">
                         <div class="img-container width" *ngIf="!controls?.schemeConfirmationCopyImage?.value">
@@ -210,7 +254,7 @@
 
                 </div>
             </div>
-            <div class="col" *ngIf="show">
+            <div class="col" *ngIf="showLoanTransferFlag">
                 <div class="row">
                     <div class="col-10 position-relative">
                         <div class="img-container width" *ngIf="!controls?.signedChequeImage?.value">
@@ -244,7 +288,7 @@
 
                 </div>
             </div>
-            <div class="col" *ngIf="show">
+            <div class="col" *ngIf="showLoanTransferFlag">
                 <div class="row">
                     <div class="col-10 position-relative">
                         <div class="img-container width" *ngIf="!controls?.declaration?.value">
@@ -271,6 +315,42 @@
                                     [src]="controls?.declarationCopyImage?.value | safe : 'resourceUrl'" height="250"
                                     width="290" scrolling="no"></iframe>
 
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+            <div class="col" *ngIf="showScrapAcknowledgementFlag"></div>
+            <div class="col" *ngIf="showScrapAcknowledgementFlag"></div>
+            <div class="col" *ngIf="showScrapAcknowledgementFlag">
+                <div class="row">
+                    <div class="col-10 position-relative">
+                        <div class="img-container width" *ngIf="!controls?.customerConfirmationImage?.value">
+                            <img src="../../../../../../../assets/media/icons/image-placeholder.png"
+                                class="placeholder-image">
+                        </div>
+
+                        <!-- <div class="position-relative edit-width">
+                                <img src="../../../../../assets/media/icons/edit.svg" alt=""
+                                    *ngIf="isEdit && controls?.customerConfirmationImage?.value"
+                                    class="kt-pointer edit-icon" (click)="editImages('customerConfirmation');">
+                            </div> -->
+
+                        <div class="" *ngIf="controls?.customerConfirmationImage?.value">
+                            <div class="d-inline-block img-container width kt-margin-r-15 position-relative"
+                                (click)="preview(controls?.customerConfirmationImage?.value)">
+                                <img class="fetched-image" [src]="controls?.customerConfirmationImage?.value"
+                                    *ngIf="!pdf.customerConfirmation">
+                                <img src="../../../../../assets/media/icons/edit.svg" alt=""
+                                    *ngIf="isEdit && controls?.customerConfirmationImage?.value"
+                                    class="kt-pointer edit-icon" (click)="editImages('customerConfirmation');">
+                                <iframe *ngIf="pdf.customerConfirmation"
+                                    [src]="controls?.customerConfirmationImage?.value | safe : 'resourceUrl'"
+                                    height="250" width="290" scrolling="no"></iframe>
+                                <!-- <kt-pdf-viewer [page]="1" [showAll]="false" *ngIf="pdf.customerConfirmation"
+                                        [pdfSrc]="controls?.customerConfirmationImage.value"
+                                        (click)="preview(controls?.customerConfirmationImage.value)"></kt-pdf-viewer> -->
                             </div>
                         </div>
                     </div>
