--- a/gold-admin-frontend/src/app/views/pages/admin/loan-management/loan-application-form/tabs/interest-calculator/interest-calculator.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/loan-management/loan-application-form/tabs/interest-calculator/interest-calculator.component.html
@@ -8,7 +8,7 @@
                     </div>
                     <div class="col-7">
                         <input type="number" #amt class="form-control" formControlName="finalLoanAmount"
-                            placeholder="0,00,000" (blur)="amountValidation()"
+                            placeholder="0,00,000" (blur)="partnerReset();amountValidation();"
                             [class.isError]="controls.finalLoanAmount.touched && controls.finalLoanAmount.invalid" />
                         <div>
                             <mat-error
@@ -78,7 +78,7 @@
                         <label class="mandatory">Partner Name</label>
                     </div>
                     <div class="col-7">
-                        <select formControlName="partnerId" class="form-control" (change)="getSchemes()"
+                        <select formControlName="partnerId" class="form-control" (change)="reset();returnScheme()"
                             [class.isError]="controls.partnerId.touched && controls.partnerId.invalid">
                             <option value="null" [selected]="true" [disabled]="true">Select Partner</option>
                             <option value="" selected disabled *ngIf="partnerList.length == 0">No matching Scheme found
@@ -156,7 +156,7 @@
                     <div class="col-7">
                         <select class="form-control" formControlName="paymentFrequency" (change)="getIntrest()"
                             [class.isError]="controls.paymentFrequency.touched && controls.paymentFrequency.invalid">
-                            <option value="" [selected]="true" [disabled]="true">Select Payment Frequency</option>
+                            <option value=null [selected]="true" [disabled]="true">Select Payment Frequency</option>
                             <option [value]="pay.days" *ngFor="let pay of paymentFrequency">{{pay.days}}</option>
                         </select>
                         <mat-error
