--- a/gold-admin-frontend/src/app/views/pages/admin/lead-management/add-lead/add-lead.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/lead-management/add-lead/add-lead.component.html
@@ -5,7 +5,7 @@
     <div>
         <div class="kt-form">
             <form [formGroup]="leadForm">
-                <div class="kt-portlet__body lead-form">
+                <div class="kt-portlet__body lead-form" id="container">
 
                     <div class="kt-portlet__body-progress">
                         <mat-spinner [diameter]="20"></mat-spinner>
