--- a/gold-admin-frontend/src/app/views/pages/admin/loan-management/loan-application-form/tabs/bank-details/bank-details.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/loan-management/loan-application-form/tabs/bank-details/bank-details.component.html
@@ -125,7 +125,7 @@
                         </div>
                     </div>
                     <div class="col-6">
-                        <div class="row">
+                        <div class="row" *ngIf="!details?.masterLoan?.applicationFormForAppraiser">
                             <div class="col-4 form-label">
                                 <label class="mandatory kt-padding-l-10">Upload Passbook / Bank Statement / Cancel
                                     Cheque</label>
