--- a/gold-admin-frontend/src/app/views/pages/admin/kyc-settings/tabs/user-personal/user-personal.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/kyc-settings/tabs/user-personal/user-personal.component.html
@@ -39,7 +39,7 @@
                                         <input type="text" class="form-control" [matDatepicker]="picker"
                                             (click)="picker.open()" formControlName="dateOfBirth"
                                             [class.isError]="controls.dateOfBirth.touched && controls.dateOfBirth.invalid"
-                                            readonly placeholder="4/5/2020" [max]="minDate"
+                                            readonly placeholder="MM/DD/YYYY" [max]="minDate"
                                             (dateChange)="ageValidation()">
                                         <!-- <mat-datepicker-toggle matSuffix [for]="picker">
                                             <mat-icon matDatepickerToggleIcon>keyboard_arrow_down</mat-icon>
