--- a/gold-admin-frontend/src/app/views/pages/admin/loan-settings/add-scheme/add-scheme.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/loan-settings/add-scheme/add-scheme.component.html
@@ -180,14 +180,14 @@
                             <input type="radio" id="no" value="false" formControlName="isSplitAtBeginning">
                             <label for="no">No</label> -->
 
-                                <mat-radio-group formControlName="isSplitAtBeginning">
-                                    <mat-radio-button [value]="true">Yes</mat-radio-button>
-                                    <mat-radio-button [value]="false">No</mat-radio-button>
-                                </mat-radio-group>
-                            </div>
+                            <mat-radio-group formControlName="isSplitAtBeginning">
+                                <mat-radio-button [value]="true">Yes</mat-radio-button>
+                                <mat-radio-button [value]="false">No</mat-radio-button>
+                            </mat-radio-group>
                         </div>
+                    </div>
 
-                        <!-- <div class="row kt-padding-t-15">
+                    <!-- <div class="row kt-padding-t-15">
                             <div class="offset-3 col-3">
                                 <p class="text-color form-label">
                                     <mat-form-field class="example-full-width">
@@ -214,7 +214,7 @@
                             </div>
                         </div> -->
 
-                        <!-- <div class="row">
+                    <!-- <div class="row">
                             <div class="col-3 form-label">
                                 <label class="kt-padding-l-10 mandatory">
                                     Rate of Interest <br>
@@ -238,42 +238,41 @@
                             </div>
                         </div> -->
 
-                        <div class="row justify-content-end form-label">
-                            <label *ngIf="schemeInterest.length > 3" class="kt-pointer mr-4" (click)="removeSlabRate()">
-                                Remove
-                                Slab </label>&nbsp;&nbsp;
-                            <label class="kt-pointer mr-4" (click)="addSlabRate()"> Add Slab </label>
+                    <div class="row justify-content-end form-label">
+                        <label *ngIf="schemeInterest.length > 3" class="kt-pointer mr-4" (click)="removeSlabRate()">
+                            Remove
+                            Slab </label>&nbsp;&nbsp;
+                        <label class="kt-pointer mr-4" (click)="addSlabRate()"> Add Slab </label>
+                    </div>
+
+                    <!-- Form Array -->
+
+                    <div class="row">
+                        <div class="col-3 form-label">
+                            <label class="kt-padding-l-10 mandatory">
+                                Rate of Interest <br>
+                                (% / Monthly)
+                            </label>
                         </div>
-
-                        <!-- Form Array -->
-
-                        <div class="row">
-                            <div class="col-3 form-label">
-                                <label class="kt-padding-l-10 mandatory">
-                                    Rate of Interest <br>
-                                    (% / Monthly)
-                                </label>
-                            </div>
-                            <div class="col">
-                                <div class="row" formArrayName="schemeInterest">
-                                    <div class="col-4" *ngFor="let slab of schemeInterest.controls; index as idx">
-                                        <div [formGroupName]="idx">
-                                            <div>
-                                                <mat-form-field class="example-full-width">
-                                                    <input type="number" matInput formControlName="days">
-                                                    <span matSuffix>&nbsp; Days</span>
-                                                </mat-form-field>
-                                            </div>
-                                            <div>
-                                                <input type="number" class="form-control"
-                                                    formControlName="interestRate">
-                                            </div>
+                        <div class="col">
+                            <div class="row" formArrayName="schemeInterest">
+                                <div class="col-4" *ngFor="let slab of schemeInterest.controls; index as idx">
+                                    <div [formGroupName]="idx">
+                                        <div>
+                                            <mat-form-field class="example-full-width">
+                                                <input type="number" matInput formControlName="days">
+                                                <span matSuffix>&nbsp; Days</span>
+                                            </mat-form-field>
+                                        </div>
+                                        <div>
+                                            <input type="number" class="form-control" formControlName="interestRate">
                                         </div>
                                     </div>
                                 </div>
                             </div>
                         </div>
-                        <!-- <div class="row kt-padding-t-15">
+                    </div>
+                    <!-- <div class="row kt-padding-t-15">
                         <div class="offset-3 col-3">
                             <p class="text-color form-label">30 Days</p>
                         </div>
@@ -284,7 +283,7 @@
                             <p class="text-color form-label">180 Days</p>
                         </div>
                     </div> -->
-                        <!-- <div class="row">
+                    <!-- <div class="row">
                         <div class="col-3">
                             <p class="text-color form-label mandatory">
                                 Rate of Interest <br>
@@ -305,7 +304,7 @@
                                 [class.isError]="fillingForm.get('interestRateOneHundredEightyDaysAnnually').touched && fillingForm.get('interestRateOneHundredEightyDaysAnnually').invalid">
                         </div>
                     </div> -->
-                    </div>
+                    <!-- </div> -->
                 </form>
             </mat-tab>
             <mat-tab label="By Uploading CSV">
